--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" webcrx="" class=" qjfkfdnjxp idc0_350"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+<html lang="en">
+  <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Work in Progress | John Varghese</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="./index_files/john-circular-logo.gif" type="image/gif">
-  <link rel="stylesheet" href="./index_files/all.min.css">
-  <style>
+  <link rel="icon" href="./src/john_profile.png" type="image/gif">  <style>
     :root {
       --accent1: #00ffe7;
       --accent2: #6c47ff;
@@ -216,11 +215,11 @@
       }
     }
   </style>
-<script src="blob:https://cybertrinity.neocities.org/3ef3d075-22ae-4abb-bf39-7ed29101857b"></script></head>
+<script src=""></script></head>
 <body>
   <div class="gradient-bg"></div>
   <div class="wip-container">
-    <img src="./index_files/john-circular-logo.gif" alt="John Varghese Logo" class="wip-logo">
+    <img src="/src/john_profile.png" alt="John Varghese Logo" class="wip-logo">
     <div class="wip-title">Work in Progress</div>
     <div class="wip-msg">
       This site is currently being crafted to perfection.<br>
@@ -236,6 +235,4 @@
       Thanks for visiting!
     </div>
   </div>
-
-
-<protonpass-root-ff1e data-protonpass-role="root" data-protonpass-theme="os"><template shadowrootmode="closed"></template></protonpass-root-ff1e></body></html>
+</body></html>
