--- a/index.html
+++ b/index.html
@@ -1,238 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Work in Progress | John Varghese</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="./src/john_profile.png" type="image/gif">  <style>
-    :root {
-      --accent1: #00ffe7;
-      --accent2: #6c47ff;
-      --accent3: #ff4ecd;
-      --bg-dark: #181a24;
-      --glass: rgba(24, 26, 36, 0.85);
-      --shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-      --radius: 20px;
-      --font: "Poppins", "Segoe UI", Arial, sans-serif;
-    }
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      min-height: 100vh;
-      background: var(--bg-dark);
-      color: #fff;
-      font-family: var(--font);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      overflow: hidden;
-    }
-    .gradient-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-      background: linear-gradient(
-        120deg,
-        var(--accent1),
-        var(--accent2),
-        var(--accent3),
-        var(--accent1)
-      );
-      background-size: 300% 300%;
-      animation: gradientMove 8s ease-in-out infinite alternate;
-      opacity: 0.15;
-      pointer-events: none;
-    }
-    @keyframes gradientMove {
-      0% {
-        background-position: 0% 50%;
-      }
-      100% {
-        background-position: 100% 50%;
-      }
-    }
-    .wip-container {
-      position: relative;
-      z-index: 1;
-      background: var(--glass);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 3.5rem 2.5rem 2.5rem 2.5rem;
-      max-width: 400px;
-      width: 95vw;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      animation: fadeIn 1.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-    }
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    .wip-logo {
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 4px 24px var(--accent2), 0 0 0 4px var(--accent1);
-      background: #fff;
-      display: inline-block;
-    }
-    .wip-title {
-      font-size: 2.1rem;
-      font-weight: 800;
-      margin-bottom: 0.7rem;
-      background: linear-gradient(
-        90deg,
-        var(--accent1),
-        var(--accent2),
-        var(--accent3)
-      );
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-    .wip-msg {
-      font-size: 1.15rem;
-      color: #dbeafe;
-      margin-bottom: 2.2rem;
-      line-height: 1.7;
-    }
-    .social-buttons {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 2.2rem;
-      gap: 2.5rem; /* Increased gap for more padding around icons */
-    }
-    .social-btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      background: linear-gradient(
-        135deg,
-        var(--accent1),
-        var(--accent2),
-        var(--accent3)
-      );
-      box-shadow: 0 2px 10px rgba(108, 71, 255, 0.13);
-      color: #fff;
-      font-size: 1.7rem;
-      transition: transform 0.18s, box-shadow 0.18s, background 0.18s;
-      text-decoration: none;
-      border: none;
-      outline: none;
-      padding: 8px; /* Added padding around icons */
-      box-sizing: content-box;
-    }
-    .social-btn:hover {
-      transform: scale(1.5) rotate(-6deg);
-      box-shadow: 0 4px 24px var(--accent3);
-      background: linear-gradient(
-        135deg,
-        var(--accent3),
-        var(--accent2),
-        var(--accent1)
-      );
-      color: #fff;
-    }
-    .wip-thanks {
-      margin-top: 1.5rem;
-      font-size: 1.05rem;
-      color: #a5f3fc;
-      background: rgba(0, 255, 231, 0.08);
-      border-radius: 12px;
-      padding: 0.7rem 1.2rem;
-      display: inline-flex;
-      align-items: center;
-      font-style: italic;
-      box-shadow: 0 1px 8px rgba(0, 255, 231, 0.05);
-      gap: 0.6em;
-    }
-    .wip-thanks .heart-animated {
-      color: #ff2c44;
-      font-size: 1.2em;
-      animation: heartbeat 1.8s infinite ease-in-out;
-      display: inline-block;
-      transform-origin: center;
-      transform-box: fill-box;
-    }
-    @keyframes heartbeat {
-      0%,
-      100% {
-        transform: scale(1);
-      }
-      25% {
-        transform: scale(1.25);
-      }
-      50% {
-        transform: scale(1);
-      }
-      75% {
-        transform: scale(1.15);
-      }
-    }
-    @media (max-width: 600px) {
-      .wip-container {
-        padding: 2rem 0.7rem 1.5rem 0.7rem;
-        max-width: 98vw;
-      }
-      .wip-title {
-        font-size: 1.35rem;
-      }
-      .wip-msg {
-        font-size: 1rem;
-      }
-      .wip-logo {
-        width: 70px;
-        height: 70px;
-      }
-      .social-btn {
-        width: 40px;
-        height: 40px;
-        font-size: 1.3rem;
-        padding: 6px;
-      }
-      .social-buttons {
-        gap: 2rem;
-      }
-    }
-  </style>
-<script src=""></script></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="John Varghese - Cybersecurity & Digital Innovation Portfolio">
+    <meta name="keywords" content="cybersecurity, digital innovation, github, portfolio, developer">
+    <meta name="author" content="John Varghese">
+    <title>John Varghese | Cyber Trinity Portfolio</title>
+    <link rel="icon" href="./src/john_profile.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-  <div class="gradient-bg"></div>
-  <div class="wip-container">
-    <img src="/src/john_profile.png" alt="John Varghese Logo" class="wip-logo">
-    <div class="wip-title">Work in Progress</div>
-    <div class="wip-msg">
-      This site is currently being crafted to perfection.<br>
-      Meanwhile, let’s connect!
-    </div>
-    <div class="social-buttons">
-      <a class="social-btn" href="https://instagram.com/cyber__trinity" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a class="social-btn" href="https://www.linkedin.com/in/john--varghese" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-      <a class="social-btn" href="mailto:CyberTrinity@Mail2Tor.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
-    </div>
-    <div class="wip-thanks">
-      <span class="heart-animated"><i class="fas fa-heart"></i></span>
-      Thanks for visiting!
-    </div>
-  </div>
-</body></html>
+    <!-- Header Section -->
+    <header class="hero-section">
+        <div class="hero-content">
+            <div class="profile-container">
+                <img src="./src/john_profile.png" alt="John Varghese Profile" class="profile-image">
+                <div class="profile-glow"></div>
+            </div>
+            <h1 class="hero-title">
+                <span class="glitch" data-text="John Varghese">John Varghese</span>
+            </h1>
+            <p class="hero-subtitle">Cyber Trinity | Digital Innovation Specialist</p>
+            <div class="hero-description">
+                <p>Empowering digital safety through cutting-edge cybersecurity solutions and innovative technology. Passionate about creating secure digital experiences and exploring the frontiers of cyber defense.</p>
+            </div>
+            <div class="scroll-indicator">
+                <i class="fas fa-chevron-down"></i>
+                <span>Explore My Work</span>
+            </div>
+        </div>
+        <div class="matrix-bg"></div>
+    </header>
+
+    <!-- About Section -->
+    <section class="about-section" id="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>I'm a passionate cybersecurity enthusiast and digital innovation specialist, dedicated to creating secure and innovative solutions in the digital realm. With expertise spanning multiple programming languages and frameworks, I focus on building robust security systems and exploring emerging technologies.</p>
+                    <div class="skills-grid">
+                        <div class="skill-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Cybersecurity</span>
+                        </div>
+                        <div class="skill-item">
+                            <i class="fas fa-code"></i>
+                            <span>Full Stack Development</span>
+                        </div>
+                        <div class="skill-item">
+                            <i class="fas fa-brain"></i>
+                            <span>Digital Innovation</span>
+                        </div>
+                        <div class="skill-item">
+                            <i class="fas fa-graduation-cap"></i>
+                            <span>Continuous Learning</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Repository Section -->
+    <section class="repos-section" id="repositories">
+        <div class="container">
+            <h2 class="section-title">My Projects</h2>
+            <div class="loading-spinner" id="loadingSpinner">
+                <div class="spinner"></div>
+                <p>Loading repositories...</p>
+            </div>
+            <div class="error-message" id="errorMessage" style="display: none;">
+                <i class="fas fa-exclamation-triangle"></i>
+                <p>Unable to load repositories. Please try again later.</p>
+            </div>
+            <div class="bento-container" id="bentoContainer">
+                <!-- Repository cards will be dynamically inserted here -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h3>John Varghese</h3>
+                    <p>Cybersecurity & Digital Innovation</p>
+                </div>
+                <div class="social-links">
+                    <a href="https://github.com/John-Varghese-EH" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://linkedin.com/in/John--Varghese" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://instagram.com/Cyber__Trinity" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://youtube.com/@Trendy_NED" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="mailto:CyberTrinity@Mail2Tor.com" aria-label="Email">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 John Varghese. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
