--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             "https://linkedin.com/in/John--Varghese",
             "https://instagram.com/Cyber__Trinity",
             "https://youtube.com/@Trendy_NED",
+            "https://johnvarghese.vercel.app",
             "https://johnvarghese.netlify.app"
         ]
     }
@@ -353,7 +354,7 @@
                     Penetration testing, ethical hacking, and innovative security solutions.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://johnvarghese.netlify.app" target="_blank" class="btn-primary">
+                    <a href="https://johnvarghese.vercel.app" target="_blank" class="btn-primary">
                         <span>View Portfolio</span>
                         <i class="fas fa-external-link-alt"></i>
                         <div class="btn-glow"></div>
