--- a/index.html
+++ b/index.html
@@ -644,13 +644,13 @@
                         </div>
                     </a>
 
-                    <a href="https://johnvarghese.netlify.app" target="_blank" class="contact-method">
+                    <a href="https://johnvarghese.vercel.app" target="_blank" class="contact-method">
                         <div class="method-icon">
                             <i class="fas fa-globe"></i>
                         </div>
                         <div class="method-info">
                             <h4>Portfolio</h4>
-                            <span>johnvarghese.netlify.app</span>
+                            <span>johnvarghese.vercel.app & johnvarghese.netlify.app</span>
                         </div>
                     </a>
 
